# rugs-and-candles

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
apps/web/: abstract.config.ts  package.json  tsconfig.json
apps/web/components/: Board.js  DiceRoll.js  Game.js
apps/web/components/wallet/: Astronaut.js  Chain.js  Connect.js  User.js  Wallet.js  Warning.js
apps/web/pages/: _app.js  index.js
apps/web/utils/: gameUtils.js
contracts/board/: Cargo.toml  metadata.json
contracts/board/src/: api.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/board/src/handlers/: execute.rs  instantiate.rs  mod.rs  module_ibc_handler.rs  query.rs  reply.rs
contracts/board/tests/: integration.rs
contracts/controller/: Cargo.toml
contracts/controller/schema/: module-schema.json
contracts/controller/src/: api.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/controller/src/handlers/: bech32_converter.rs  execute.rs  instantiate.rs  mod.rs  module_ibc_handler.rs  query.rs
contracts/controller/tests/: integration.rs
frontend/: package-lock.json  package.json
schema/board/0.0.1/: execute_msg.json  instantiate_msg.json  module-schema.json
schema/controller/0.0.1/: query_msg.json
schema/controller/0.0.1/raw/: execute.json  query.json  response_to_user_position.json
