[workspace]
members = ["contracts/*", "packages/*"]
exclude = [
  "packages/eslint-config",     # Exclude this specific crate
  "packages/typescript-config",
  "packages/ui",
  "packages/client"
]
resolver = "2"

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false

[workspace.dependencies]
cosmwasm-std = { version = "1.5.3" }
cosmwasm-schema = { version = "2.0.4" }
cw-controllers = { version = "1.1.2" }
cw-storage-plus = "1.2.0"
thiserror = { version = "1.0.50" }
schemars = "0.8"
cw-asset = { version = "3.0.0" }
abstract-app = { version = "0.22.2" }
abstract-adapter = { version = "0.22.2" }
abstract-interface = { version = "0.22.0" }
abstract-client = { version = "0.22.0" }
lazy_static = "1.4.0"
# abstract-money-market-adapter = { git = "https://github.com/AbstractSDK/abstract.git", branch = "removemm", default-features = false }
abstract-money-market-adapter = { git = "https://github.com/AbstractSDK/abstract.git", rev = "ca7e2cb", default-features = false }
abstract-money-market-standard = { version = "0.22.0" }
# abstract-money-market-adapter = { version = "0.22.0", default-features = false }


cw-orch = { version = "0.22.2" }
cw-orch-interchain = { version = "0.1.0" }
const_format = "0.2.32"

controller = { path = "contracts/controller" }
board = { path = "contracts/board" }
common = { path = "packages/common" }
speculoos = "0.11.0"
semver = "1.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
clap = { version = "4.3.7" }
